# OS_Lab5

./: README.md
OS_Lab5/: Makefile  OS_Lab5.sln
OS_Lab5/Client/: Client.cpp  Client.vcxproj
OS_Lab5/Server/: Server.cpp  Server.vcxproj
Tests/src/: CMakeLists.txt
Tests/src/Test/: CMakeLists.txt  tests.cpp
